[package]
name = "md2docx"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.36", features = ["derive"] }
docx-rs = "0.4.17"
serde = "1.0.219"
yaml-front-matter = "0.1.0"
image = "0.24.9" # For image processing
markdown = { version = "1.0.0-alpha.23" }
log = "0.4.20"
env_logger = "0.10.1"
anyhow = "1.0.98"
serde_json = "1.0.140"
bimap = "0.6.3"
once_cell = "1.21.3"
regex = "1.11.1"
